Fixed title alignment

--- a/src/components/css/header.module.css
+++ b/src/components/css/header.module.css
@@ -5,7 +5,7 @@
 
 .headerTitle {
     margin: 0 auto;
-    max-width: 960;
+    max-width: 960px;
     padding: 1.45rem 1.0875rem;
 }
 
